fix spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,8 +73,3 @@
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.mugbanner {
- align: center;
-  
-  
-}
